<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <!-- 
        Spring Boot 3.3+ como parent para gerenciar versões de dependências.
        Escolhido por suporte nativo a Virtual Threads (Project Loom) e melhor performance.
        Versão 3.3.6+ inclui correções de segurança e melhorias de performance.
    -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.6</version>
        <relativePath/>
    </parent>
    
    <groupId>com.marcelo.orchestrator</groupId>
    <artifactId>smart-order-orchestrator</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Smart Order Orchestrator</name>
    <description>Smart Order Orchestrator - Hexagonal Architecture with Spring Boot 3.3+ and Java 21</description>
    
    <properties>
        <!-- Java 21: Suporte a Virtual Threads (Project Loom) para alta concorrência sem overhead de threads tradicionais -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Lombok: Redução de boilerplate (getters, setters, builders) mantendo legibilidade e performance -->
        <!-- Versão 1.18.34: Suporte completo Java 21, correções de compatibilidade com annotation processors -->
        <lombok.version>1.18.34</lombok.version>
        
        <!-- Resilience4j: Circuit Breaker, Retry e Fallback para resiliência em integrações externas -->
        <!-- Versão 2.2.0: Melhorias de performance e compatibilidade com Spring Boot 3.3+ -->
        <resilience4j.version>2.2.0</resilience4j.version>
        
        <!-- Flyway: Migrations de banco de dados versionadas -->
        <!-- Versão 10.10.0: Suporte completo para PostgreSQL 16+ e melhorias de performance -->
        <flyway.version>10.10.0</flyway.version>
    </properties>
    
    <dependencies>
        <!-- Spring Boot Web: REST API, servlet container, autoconfiguration -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        
        <!-- Spring WebFlux: WebClient para chamadas HTTP reativas (integrações externas) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        
        <!-- Spring Boot Validation: Bean Validation (JSR-303) para validação de DTOs -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        
        <!-- Spring Data JPA: Abstração para persistência, repositórios, transações -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        
        <!-- Flyway: Migrations de banco de dados versionadas -->
        <!-- Versão 10.10.0: Suporte completo para PostgreSQL 16+ -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>${flyway.version}</version>
        </dependency>
        
        <!-- Flyway Database PostgreSQL: Driver específico para PostgreSQL 16+ -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
            <version>${flyway.version}</version>
        </dependency>
        
        <!-- Spring Boot Actuator: Health checks, metrics, monitoring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        
        <!-- PostgreSQL Driver: Banco relacional robusto para consistência ACID -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        
        <!-- H2 Database: Banco em memória para testes e desenvolvimento local -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        
        <!-- Resilience4j Spring Boot 3: Circuit Breaker para resiliência em integrações externas -->
        <dependency>
            <groupId>io.github.resilience4j</groupId>
            <artifactId>resilience4j-spring-boot3</artifactId>
            <version>${resilience4j.version}</version>
        </dependency>
        
        <!-- Resilience4j Reactor: Suporte reativo para WebClient -->
        <dependency>
            <groupId>io.github.resilience4j</groupId>
            <artifactId>resilience4j-reactor</artifactId>
            <version>${resilience4j.version}</version>
        </dependency>
        
        <!-- Lombok: Anotações para reduzir boilerplate (@Getter, @Builder, @RequiredArgsConstructor) -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        
        
        <!-- SpringDoc OpenAPI: Documentação automática da API REST (Swagger UI) -->
        <!-- Versão 2.6.0: Compatível com Spring Boot 3.3+, melhorias de performance -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.6.0</version>
        </dependency>
        
        <!-- Google Cloud Secret Manager: Gerenciamento seguro de secrets (chaves de API, senhas) -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-secretmanager</artifactId>
            <version>2.4.0</version>
        </dependency>
        
        <!-- Spring Cloud GCP Secret Manager: Integração Spring Boot com Secret Manager -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>spring-cloud-gcp-starter-secretmanager</artifactId>
            <version>4.0.0</version>
        </dependency>
        
        <!-- Spring Boot Test: Framework de testes, MockMvc, TestContainers support -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        
        <!-- Mockito: Framework de mocking para testes unitários -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <!-- Spring Boot Maven Plugin: Empacotamento, execução, build de imagens Docker -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            
            <!-- Maven Compiler Plugin: Configuração para Java 21 e annotation processors -->
            <!-- Versão 3.13.0: Melhor suporte para Java 21, correções de bugs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <!-- 
                        Annotation Processors: Lombok precisa processar anotações em tempo de compilação.
                    -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
